--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -496,7 +496,8 @@
    "metadata": {},
    "source": [
     "#### 1.5 Cleaning and Wrangling the Data\n",
-    "Wrangling the data and removing irrelevant columns. $\\newline$\n",
+    "Wrangling the data and removing irrelevant columns. \n",
+    "\n",
     "Keeping just STG and PEG from the training set, since they are the only variables that we are interested in and will be using."
    ]
   },
@@ -1712,7 +1713,7 @@
     "\n",
     "This was not quite what we had expected to find as the outcome of our analysis, since we initially expected to be able to observe a clearer positive relationship between STG and PEG. However, this can still be reasoned with the fact that there was already not much of a strong relationship between STG and PEG as described in Section 1.8.  \n",
     "\n",
-    "As mentioned in the Introduction, we had initially believed the accuracy of our K-NN regression to be about 80%. Since there are no missing observations in our data set, there may be several reasons causing this difference in estimated accuracy and the actual accuracy calculated. On one hand, this can be attributed to the fact that exam performance could be affected by other external factors such as health condition, student IQ, stress levels, etc. that were not in the data set. On the other hand, we can also say that our data set may not be big enough to directly draw a relationship between just study time and exam performance. \n",
+    "As mentioned in the Introduction, we had initially believed the accuracy of our K-NN regression to be about 80%. Since there are no missing observations in our data set, there may be several reasons causing this difference in estimated accuracy and the actual accuracy calculated. On one hand, this can be attributed to the fact that exam performance could be affected by other external factors such as health condition, student IQ, stress levels, learning ability, etc. that were not in the data set. On the other hand, we can also say that our data set may not be big enough to directly draw a relationship between just study time and exam performance. \n",
     "\n",
     "It would be best to seek out another form of prediction that can predict using multiple factors (which would be outside the scope of what we have learned thus far in our course), or find a larger data set with more observations.\n",
     "\n",
@@ -1726,7 +1727,8 @@
    "metadata": {},
    "source": [
     "* How much time should a student be spending studying to improve exam performance?\n",
-    "* How do other factors (such as repetition, knowledge level, etc.) contribute to exam performance?"
+    "* How do other factors (such as repetition, knowledge level, etc.) contribute to exam performance?\n",
+    "* Can a similar approach be used in the industry to predict workers' performance based on their working time? How?"
    ]
   },
   {
