--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "We believe there to be a positive relationship between PEG and STG, since it is natural to assume that increasing the degree of study time would result in higher/better exam performance. As STG increases, so should PEG. The accuracy of our model we are expecting to obtain is 80% because exam performance should be strongly related to study time based on common knowledge.\n",
     "\n",
-    "Hence, we are going to pick STG as the predictor (explanatory variable) and PEG as our response variable. We will be conducting regression since our response variable is numerical. Since we are not sure which regression method (linear or K-NN) will be better at fitting our data set, we will be conduct both and compare/contrast their prediction errors to determine the better model."
+    "Thus, we are going to pick STG as the predictor (explanatory variable) and PEG as our response variable. We will be conducting regression since our response variable is numerical. Since we are not sure which regression method (linear or K-NN) will be better at fitting our data set, we will conduct both and compare/contrast their prediction errors to determine the better model."
    ]
   },
   {
@@ -474,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evidence is shown in the ggpairs visualization that there may be a relationship between STG and PEG."
+    "It can be observed from the ggpairs visualization that there may be a relationship between STG and PEG."
    ]
   },
   {
@@ -879,7 +879,7 @@
    "source": [
     "From table 1.7.1 to 1.7.3, we can see that the means are 0.37 for STG and 0.46 for PEG, the maximums are 0.99 for STG and 0.93 for PEG, and minimums are 0 for STG and 0 for PEG. \n",
     "\n",
-    "Since all of these three summaries show that the values of STG and PEG are close in value and have roughly the same scale, we will not need to scale or standardize the data for linear regression. It is still good practice to scale the data for K-NN regression, since it is extremely sensitive to differing scales of the variables."
+    "All of these three summaries show that the values of STG and PEG are close in value and have roughly the same scale. We will not need to scale or standardize the data for linear regression, but it is still good practice to scale the data for K-NN regression, since it is extremely sensitive to differing scales of the variables."
    ]
   },
   {
@@ -1067,8 +1067,9 @@
    "source": [
     "#### 1.8 Visualizing the Data\n",
     "\n",
-    "Refer back to the ggpairs plot for additional visualization. $\\newline$\n",
-    "Plotting PEG against STG."
+    "Refer back to the ggpairs plot for additional visualization.\n",
+    "\n",
+    "Below we are plotting PEG against STG.\n"
    ]
   },
   {
@@ -1157,7 +1158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a rule of thumb, standardizing our training data should be a part of the preprocessing before any predictive modelling or analysis, although as mentioned and observed in Figure 1.8.1, the range of the x-axis and y-axis on the scatterplot have roughly the same scale. From the summaries of Figures 1.7.1 to 1.7.3, we can also see that both the predictor and the response variable are close in value and share a similar scale. \n",
+    "As a rule of thumb, standardizing our training data should be a part of the preprocessing before any predictive modelling or analysis, although as mentioned and observed in Figure 1.8.1, the range of the x-axis and y-axis on the scatterplot have roughly the same scale. From the summaries of Figures 1.7.1 to 1.7.3, we can also see that both the predictor and the response variables are close in value and share a similar scale.\n",
     "\n",
     "There is no need to scale or standardize the data for linear regression, but it is still good practice to scale the data for K-NN regression, since it is extremely sensitive to differing scales of the variables. "
    ]
@@ -1178,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1287,22 +1288,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.249233390042185"
+       "<table>\n",
+       "<caption>A tibble: 1 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.estimate</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0.2492334</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
       ],
       "text/latex": [
-       "0.249233390042185"
+       "A tibble: 1 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " .estimate\\\\\n",
+       " <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 0.2492334\\\\\n",
+       "\\end{tabular}\n"
       ],
       "text/markdown": [
-       "0.249233390042185"
+       "\n",
+       "A tibble: 1 × 1\n",
+       "\n",
+       "| .estimate &lt;dbl&gt; |\n",
+       "|---|\n",
+       "| 0.2492334 |\n",
+       "\n"
       ],
       "text/plain": [
-       "[1] 0.2492334"
+       "  .estimate\n",
+       "1 0.2492334"
       ]
      },
      "metadata": {},
@@ -1315,9 +1338,22 @@
     "        bind_cols(user_training) %>%\n",
     "        metrics(truth = PEG ,estimate = .pred) %>%\n",
     "        filter(.metric == \"rmse\") %>%\n",
-    "        select(.estimate) %>%\n",
-    "        pull()\n",
+    "        select(.estimate) \n",
     "lm_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "knn_rmspe <- performance_fit_knn %>%\n",
+    "  predict(user_testing) %>%\n",
+    "  bind_cols(user_testing) %>%\n",
+    "  metrics(truth = PEG, estimate = .pred)%>%\n",
+    "  filter(.metric == 'rmse') %>%\n",
+    "  pull(.estimate) \n",
+    "\n",
+    "knn_rmspeTable 2.2.1 The RMSE (of our training data) of linear regression"
    ]
   },
   {
@@ -1329,22 +1365,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.281095867238959"
+       "<table>\n",
+       "<caption>A tibble: 1 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.estimate</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0.2810959</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
       ],
       "text/latex": [
-       "0.281095867238959"
+       "A tibble: 1 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " .estimate\\\\\n",
+       " <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 0.2810959\\\\\n",
+       "\\end{tabular}\n"
       ],
       "text/markdown": [
-       "0.281095867238959"
+       "\n",
+       "A tibble: 1 × 1\n",
+       "\n",
+       "| .estimate &lt;dbl&gt; |\n",
+       "|---|\n",
+       "| 0.2810959 |\n",
+       "\n"
       ],
       "text/plain": [
-       "[1] 0.2810959"
+       "  .estimate\n",
+       "1 0.2810959"
       ]
      },
      "metadata": {},
@@ -1357,9 +1415,15 @@
     "        bind_cols(user_testing) %>%\n",
     "        metrics(truth = PEG ,estimate = .pred) %>%\n",
     "        filter(.metric == \"rmse\") %>%\n",
-    "        select(.estimate) %>%\n",
-    "        pull()\n",
+    "        select(.estimate) \n",
     "lm_rmspe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 2.2.2 The RMSPE (of our testing data) of linear regression"
    ]
   },
   {
@@ -1471,40 +1535,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.227341125012816"
+       "<table>\n",
+       "<caption>A tibble: 1 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>.estimate</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>rmse</td><td>standard</td><td>0.2273411</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
       ],
       "text/latex": [
-       "0.227341125012816"
+       "A tibble: 1 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " .metric & .estimator & .estimate\\\\\n",
+       " <chr> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t rmse & standard & 0.2273411\\\\\n",
+       "\\end{tabular}\n"
       ],
       "text/markdown": [
-       "0.227341125012816"
+       "\n",
+       "A tibble: 1 × 3\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| rmse | standard | 0.2273411 |\n",
+       "\n"
       ],
       "text/plain": [
-       "[1] 0.2273411"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "0.257479542809749"
-      ],
-      "text/latex": [
-       "0.257479542809749"
-      ],
-      "text/markdown": [
-       "0.257479542809749"
-      ],
-      "text/plain": [
-       "[1] 0.2574795"
+       "  .metric .estimator .estimate\n",
+       "1 rmse    standard   0.2273411"
       ]
      },
      "metadata": {},
@@ -1526,17 +1594,70 @@
     "  predict(user_training) %>%\n",
     "  bind_cols(user_training) %>%\n",
     "  metrics(truth = PEG, estimate = .pred)%>%\n",
-    "  filter(.metric == 'rmse') %>%\n",
-    "  pull(.estimate)\n",
+    "  filter(.metric == 'rmse') \n",
     "\n",
-    "knn_rmse\n",
-    "\n",
+    "knn_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 2.3.1 The RMSE (of training data) of K-NN regression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 1 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>.estimate</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>rmse</td><td>standard</td><td>0.2574795</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " .metric & .estimator & .estimate\\\\\n",
+       " <chr> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t rmse & standard & 0.2574795\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 3\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| rmse | standard | 0.2574795 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric .estimator .estimate\n",
+       "1 rmse    standard   0.2574795"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "knn_rmspe <- performance_fit_knn %>%\n",
     "  predict(user_testing) %>%\n",
     "  bind_cols(user_testing) %>%\n",
     "  metrics(truth = PEG, estimate = .pred)%>%\n",
-    "  filter(.metric == 'rmse') %>%\n",
-    "  pull(.estimate) \n",
+    "  filter(.metric == 'rmse') \n",
     "\n",
     "knn_rmspe"
    ]
@@ -1545,9 +1666,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Table 2.3.2 The RMSPE (of testing data) of K-NN regression."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The RMSE (of training data) of K-NN regression is 0.227.\n",
     "\n",
-    "The RMSPE (of testing data) of K-NN linear regression is 0.257."
+    "The RMSPE (of testing data) of K-NN regression is 0.257."
    ]
   },
   {
@@ -1559,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
